8337622: IllegalArgumentException in java.lang.reflect.Field.get

Backport-of: 41e31d6b0ae00d70b6fb20c89318fde2bc605edb